[gd_scene load_steps=6 format=3 uid="uid://l1nwlkd4o82q"]

[ext_resource type="Script" path="res://ui/Options/options.gd" id="1_o41pu"]
[ext_resource type="Texture2D" uid="uid://817npvpwyevh" path="res://ui/main_menu/BG4.png" id="3_asj04"]
[ext_resource type="Theme" uid="uid://ct1c3bqhs7bfp" path="res://ui/theme.tres" id="3_nx8x7"]
[ext_resource type="Script" path="res://ui/Options/change_movement.gd" id="4_7a4lt"]
[ext_resource type="PackedScene" uid="uid://dnn3bcrny1kjd" path="res://entities/grandpa/grandpa.tscn" id="5_4k14q"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_o41pu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1918.0
offset_bottom = 1069.0

[node name="Bg2" type="Sprite2D" parent="Panel"]
position = Vector2(967, 539)
scale = Vector2(8.275, 8.275)
texture = ExtResource("3_asj04")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_nx8x7")
theme_override_constants/margin_left = 1575
theme_override_constants/margin_top = 400

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_nx8x7")

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_nx8x7")
theme_override_font_sizes/font_size = 120
text = "Options
"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nx8x7")
text = "Music
"

[node name="Music" type="HSlider" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nx8x7")
value = 50.0

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nx8x7")
text = "Sound effects
"

[node name="SFX" type="HSlider" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nx8x7")
value = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_7a4lt")

[node name="AD" type="Button" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(158.37, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_pressed = true
text = "Use AD for
Movement"

[node name="WS" type="Button" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(158.37, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
text = "Use WS for
Movement"

[node name="Exit2" type="Button" parent="Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="Grandpa" parent="." instance=ExtResource("5_4k14q")]
position = Vector2(113, 17)
scale = Vector2(2, 2)
anim = "Jump"
flip = true
is_start = false

[node name="Node2D" parent="Grandpa" index="0"]
visible = false

[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer2/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer2/VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/AD" to="Panel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer" method="swap_forward_side_actions"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/AD" to="." method="_on_ad_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/WS" to="Panel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer" method="swap_forward_side_actions"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/WS" to="." method="_on_ws_toggled"]
[connection signal="button_down" from="Panel/MarginContainer/VBoxContainer2/VBoxContainer/Exit2" to="." method="_on_exit_button_down"]

[editable path="Grandpa"]
